User Repository with tests

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <!-- fake object generation for testing -->
+        <dependency>
+            <groupId>br.com.six2six</groupId>
+            <artifactId>fixture-factory</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
