--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # DATA SOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5432/khamcare_db_dev
-spring.datasource.username=postgres
-spring.datasource.password=
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=khamcare-dev
 
 
