UserController's Integration test

--- a/src/main/resources/application-it-embedded.properties
+++ b/src/main/resources/application-it-embedded.properties
@@ -3,4 +3,5 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=0
 spring.data.mongodb.database=khamcare-embeddedDB
 
-
+# Logging
+logging.level.=WARN
